Fix handling of explicit function template arguments with TTPs.
gcc/cp/
	* pt.c (coerce_template_parms): Consider variadic_args_p before
	complaining about too many template arguments.
libstdc++-v3/
	* testsuite/util/testsuite_tr1.h (test_property): Don't define both
	variadic and non-variadic overloads.

git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243869 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,8 @@
 2016-12-21  Jason Merrill  <jason@redhat.com>
 
+	* pt.c (coerce_template_parms): Consider variadic_args_p before
+	complaining about too many template arguments.
+
 	* pt.c (process_partial_specialization): Use
 	get_partial_spec_bindings to check that the partial specialization
 	is more specialized than the primary template.
