PR c++/77830 	* constexpr.c (cxx_eval_array_reference): Perform out of bounds 	verification even if lval is true, just allow one past the last 	element in that case. 	(cxx_eval_store_expression): Detect stores to out of bound 	ARRAY_REF.
	* g++.dg/cpp1y/pr77830.C: New test.
	* g++.dg/cpp0x/pr65398.C: Adjust expected diagnostics.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243873 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/77830
+	* g++.dg/cpp1y/pr77830.C: New test.
+	* g++.dg/cpp0x/pr65398.C: Adjust expected diagnostics.
+
 2016-12-21  Bernd Schmidt  <bschmidt@redhat.com>
 
 	PR target/71321
