PR bootstrap/78817 	* tree-pass.h (make_pass_post_ipa_warn): Declare. 	* builtins.c (validate_arglist): Adjust get_nonnull_args call. 	Check for NULL pointer argument to nonnull arg here. 	(validate_arg): Revert 2016-12-14 changes. 	* calls.h (get_nonnull_args): Remove declaration. 	* tree-ssa-ccp.c: Include diagnostic-core.h. 	(pass_data_post_ipa_warn): New variable. 	(pass_post_ipa_warn): New class. 	(pass_post_ipa_warn::execute): New method. 	(make_pass_post_ipa_warn): New function. 	* tree.h (get_nonnull_args): Declare. 	* tree.c (get_nonnull_args): New function. 	* calls.c (maybe_warn_null_arg): Removed. 	(maybe_warn_null_arg): Removed. 	(initialize_argument_information): Revert 2016-12-14 changes. 	* passes.def: Add pass_post_ipa_warn after first ccp after IPA. c-family/ 	* c-common.c (struct nonnull_arg_ctx): New type. 	(check_function_nonnull): Return bool instead of void.  Use 	nonnull_arg_ctx as context rather than just location_t. 	(check_nonnull_arg): Adjust for the new context type, set 	warned_p to true if a warning has been diagnosed. 	(check_function_arguments): Return bool instead of void. 	* c-common.h (check_function_arguments): Adjust prototype. c/ 	* c-typeck.c (build_function_call_vec): If check_function_arguments 	returns true, set TREE_NO_WARNING on CALL_EXPR. cp/ 	* typeck.c (cp_build_function_call_vec): If check_function_arguments 	returns true, set TREE_NO_WARNING on CALL_EXPR. 	* call.c (build_over_call): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243874 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,23 @@
+2016-12-21  Jakub Jelinek  <jakub@redhat.com>
+
+	PR bootstrap/78817
+	* tree-pass.h (make_pass_post_ipa_warn): Declare.
+	* builtins.c (validate_arglist): Adjust get_nonnull_args call.
+	Check for NULL pointer argument to nonnull arg here.
+	(validate_arg): Revert 2016-12-14 changes.
+	* calls.h (get_nonnull_args): Remove declaration.
+	* tree-ssa-ccp.c: Include diagnostic-core.h.
+	(pass_data_post_ipa_warn): New variable.
+	(pass_post_ipa_warn): New class.
+	(pass_post_ipa_warn::execute): New method.
+	(make_pass_post_ipa_warn): New function.
+	* tree.h (get_nonnull_args): Declare.
+	* tree.c (get_nonnull_args): New function.
+	* calls.c (maybe_warn_null_arg): Removed.
+	(maybe_warn_null_arg): Removed.
+	(initialize_argument_information): Revert 2016-12-14 changes.
+	* passes.def: Add pass_post_ipa_warn after first ccp after IPA.
+
 2016-12-21  Pat Haugen  <pthaugen@us.ibm.com>
 
 	PR rtl-optimization/11488
