--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,10 @@
 2016-12-21  Jakub Jelinek  <jakub@redhat.com>
 
+	PR bootstrap/78817
+	* typeck.c (cp_build_function_call_vec): If check_function_arguments
+	returns true, set TREE_NO_WARNING on CALL_EXPR.
+	* call.c (build_over_call): Likewise.
+
 	PR c++/77830
 	* constexpr.c (cxx_eval_array_reference): Perform out of bounds
 	verification even if lval is true, just allow one past the last
