--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-21  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR rtl-optimization/78580
+	* gcc.target/i386/pr78580.c: New.
+
 2016-12-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/77830
