PR c++/72707 	* name-lookup.c (pushdecl_maybe_friend_1): Do check shadowing of 	artificial x if it is an anonymous union variable.
	* g++.dg/warn/Wshadow-12.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243877 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2016-12-21  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/72707
+	* name-lookup.c (pushdecl_maybe_friend_1): Do check shadowing of
+	artificial x if it is an anonymous union variable.
+
 	PR bootstrap/78817
 	* typeck.c (cp_build_function_call_vec): If check_function_arguments
 	returns true, set TREE_NO_WARNING on CALL_EXPR.
