--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2016-12-22  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/78858
+	* c-c++-common/ubsan/pr78858.c: New test.
+	* gcc.dg/nonnull-5.c: New test.
+
 2016-12-21  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/72707
