Run tests only if the machine supports the instruction set.
gcc/ChangeLog:

2016-12-22  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* config/s390/s390-c.c (s390_cpu_cpp_builtins_internal): Define
	__S390_ARCH_LEVEL__.

gcc/testsuite/ChangeLog:

2016-12-22  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/setmem_long-1.c: Use "s390_useable_hw".
	* gcc.target/s390/md/rXsbg_mode_sXl.c: Likewise.
	* gcc.target/s390/md/andc-splitter-1.c: Likewise.
	* gcc.target/s390/md/andc-splitter-2.c: Likewise.
	* lib/gcc-dg.exp (gcc-dg-runtest): Export torture_current_flags.
	* gcc.target/s390/s390.exp: Import torture_current_flags.
	(check_effective_target_s390_useable_hw): New.
	(check_effective_target_s390_z900_hw): New.
	(check_effective_target_s390_z990_hw): New.
	(check_effective_target_s390_z9_ec_hw): New.
	(check_effective_target_s390_z10_hw): New.
	(check_effective_target_s390_z196_hw): New.
	(check_effective_target_s390_zEC12_hw): New.
	(check_effective_target_s390_z13_hw): New.
	(check_effective_target_z10_instructions): Removed.
	(torture tests): Add optimization level without -march=.
	Reorder torture tests for good cache usage.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@243887 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2016-12-22  Dominik Vogt  <vogt@linux.vnet.ibm.com>
+
+	* config/s390/s390-c.c (s390_cpu_cpp_builtins_internal): Define
+	__S390_ARCH_LEVEL__.
+
 2016-12-22  Martin Liska  <mliska@suse.cz>
 
 	PR tree-optimization/78886
