--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2016-12-22  Joseph Myers  <joseph@codesourcery.com>
+
+	* es.po: Update.
+
 2016-12-16  Joseph Myers  <joseph@codesourcery.com>
 
 	* fr.po: Update.
